Trabalhando com Importações de Arquivos e Variáveis

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </head>
 
     <body>
-        <button class="btn btn-laranja">Button</button>
+        <button class="btn btn-azul">Button</button>
+
+        
     </body>
 </html>
