Utilizando Mixin para reaproveitar código

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     </head>
 
     <body>
-        <button class="btn btn-azul">Button</button>
+        <button class="btn btn-azul">Limpar</button>
 
-        
+        <button class="btn btn-verde">Cadastrar</button>
+
+        <button class="btn btn-roxo">Enviar</button>
+
+        <button class="btn btn-marrom">Sair</button>
     </body>
 </html>
