Aula de Funções no SAAS

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
         <button class="btn btn-roxo">Enviar</button>
 
         <button class="btn btn-marrom">Sair</button>
+
+        <button class="btn btn-preto">Enviar NF</button>
     </body>
 </html>
